@@ -456,6 +456,26 @@ name|yarn
 operator|.
 name|server
 operator|.
+name|api
+operator|.
+name|protocolrecords
+operator|.
+name|NMContainerStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
 name|resourcemanager
 operator|.
 name|RMContext
@@ -4539,12 +4559,18 @@ name|event
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|addNode (RMNode node)
+DECL|method|addNode (List<NMContainerStatus> containerReports, RMNode node)
 specifier|private
 specifier|synchronized
 name|void
 name|addNode
 parameter_list|(
+name|List
+argument_list|<
+name|NMContainerStatus
+argument_list|>
+name|containerReports
+parameter_list|,
 name|RMNode
 name|node
 parameter_list|)
@@ -4583,9 +4609,6 @@ operator|.
 name|getTotalCapability
 argument_list|()
 argument_list|)
-expr_stmt|;
-name|updateRootQueueMetrics
-argument_list|()
 expr_stmt|;
 name|updateMaximumAllocation
 argument_list|(
@@ -4630,6 +4653,16 @@ literal|" cluster capacity: "
 operator|+
 name|clusterResource
 argument_list|)
+expr_stmt|;
+name|recoverContainersOnNode
+argument_list|(
+name|containerReports
+argument_list|,
+name|node
+argument_list|)
+expr_stmt|;
+name|updateRootQueueMetrics
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|removeNode (RMNode rmNode)
@@ -5983,14 +6016,6 @@ operator|)
 name|event
 decl_stmt|;
 name|addNode
-argument_list|(
-name|nodeAddedEvent
-operator|.
-name|getAddedRMNode
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|recoverContainersOnNode
 argument_list|(
 name|nodeAddedEvent
 operator|.
